<?xml version="1.0"?>
<package format="2">
  <name>particle_filter</name>
  <version>0.0.0</version>
  <description>The particle filter node package</description>
  <maintainer email="232112@studenti.unimore.it">andrea</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>adx_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>tf2_ros</depend>
  <depend>adx_data</depend>
  <depend>uio_map</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
